<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.cs.technologic.Activities.HomePage">

    <EditText
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:paddingLeft="17dp"
        android:hint="Search..."
        android:id="@+id/search"
        android:background="@drawable/edittextlight"
        android:fontFamily="sans-serif-light"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/homelist"
        android:layout_below="@+id/search"
        android:layout_centerHorizontal="true"
        android:drawSelectorOnTop="false"
        android:fastScrollAlwaysVisible="true"
        android:smoothScrollbar="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GO"
        android:id="@+id/go"
        android:layout_marginLeft="5dp"
        android:textSize="15sp"
        android:background="@drawable/edittextdark"
        android:textColor="#ffffff"
        android:fontFamily="sans-serif-light"
        android:layout_alignBottom="@+id/search"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/search"
        android:textStyle="bold"
        android:typeface="sans" />
</RelativeLayout>
