<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Activities.AddComputer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp"
            android:text="ID# "
            android:id="@+id/lblId"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif-light" />

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:text="Seller:"
            android:id="@+id/lblUsername"
            android:layout_below="@+id/lblId"
            android:layout_alignParentStart="true"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="37dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:text="Test"
            android:id="@+id/infoUsername"
            android:layout_below="@+id/lblId"
            android:layout_toRightOf="@+id/lblUsername"
            android:layout_alignTop="@+id/lblUsername"
            android:clickable="true"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="17dp" />


        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:text="Make:"
            android:id="@+id/lblMake"
            android:layout_below="@+id/lblUsername"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="37dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="50dp"
            android:text="@string/make"
            android:id="@+id/infoMake"
            android:layout_toRightOf="@+id/lblMake"
            android:layout_below="@+id/lblUsername"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="17dp" />

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:text="Model:"
            android:id="@+id/lblModel"
            android:layout_below="@+id/lblMake"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="32dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="50dp"
            android:text="@string/model"
            android:id="@+id/infoModel"
            android:layout_toRightOf="@+id/lblMake"
            android:layout_below="@+id/lblMake"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="17dp" />

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:text="Harddrive:"
            android:id="@+id/lblHarddive"
            android:layout_below="@+id/lblModel"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="9dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="50dp"
            android:text="@string/harddrive"
            android:id="@+id/infoHarddrive"
            android:layout_toRightOf="@+id/lblHarddive"
            android:layout_below="@+id/lblModel"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="17dp" />

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:text="Memory:"
            android:id="@+id/lblMemory"
            android:layout_below="@+id/lblHarddive"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="19dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="50dp"
            android:text="@string/memory"
            android:id="@+id/infoMemory"
            android:layout_toRightOf="@+id/lblMemory"
            android:layout_below="@+id/lblHarddive"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="17dp" />

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:text="Processor:"
            android:id="@+id/lblProcessor"
            android:layout_below="@+id/lblMemory"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="7dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="50dp"
            android:text="@string/processor"
            android:id="@+id/infoProcessor"
            android:layout_toRightOf="@+id/lblProcessor"
            android:layout_below="@+id/lblMemory"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="17dp" />

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:text="OS:"
            android:id="@+id/lblOs"
            android:layout_below="@+id/lblProcessor"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="55dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="50dp"
            android:text="@string/os"
            android:id="@+id/infoOs"
            android:layout_toRightOf="@+id/lblOs"
            android:layout_below="@+id/lblProcessor"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="17dp" />

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:text="Year:"
            android:id="@+id/lblYear"
            android:layout_below="@+id/lblOs"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="45dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="50dp"
            android:text="@string/year"
            android:id="@+id/infoYear"
            android:layout_toRightOf="@+id/lblYear"
            android:layout_below="@+id/lblOs"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="17dp" />

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:text="Baserate:"
            android:id="@+id/lblBaserate"
            android:layout_below="@+id/lblYear"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="17dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="50dp"
            android:text="@string/baserate"
            android:id="@+id/infoBaserate"
            android:layout_toRightOf="@+id/lblBaserate"
            android:layout_below="@+id/lblYear"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="17dp" />

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:text="Description:"
            android:id="@+id/lblDescription"
            android:layout_below="@+id/lblBaserate"
            android:fontFamily="sans-serif-light" />
        <TextView
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingRight="50dp"
            android:text="@string/description"
            android:id="@+id/infoDescription"
            android:layout_toRightOf="@+id/lblDescription"
            android:layout_below="@+id/lblBaserate"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="17dp" />

        <EditText
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/placebid"
            android:background="@drawable/edittextlight"
            android:paddingLeft="11dp"
            android:fontFamily="sans-serif-light"
            android:textSize="15sp"
            android:id="@+id/infoBid"
            android:hint="BID"
            android:layout_toStartOf="@+id/infoHarddrive" />


        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/edittextdark"
            android:textSize="15sp"
            android:text="PLACE BID"
            android:id="@+id/placebid"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_below="@+id/infoDescription"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif-light"
            android:layout_alignLeft="@+id/infoDescription"
            android:layout_alignParentBottom="true" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:id="@+id/image"
            android:layout_alignTop="@+id/infoMake"
            android:layout_toEndOf="@+id/infoProcessor" />


    </RelativeLayout>
</ScrollView>
