...
        android:id="@+id/myborrows"
        android:title="My Borrows"
        android:fontFamily="sans-serif-light" />

    <item
        android:id="@+id/mybids"
        android:title="My Bids"
        android:fontFamily="sans-serif-light" />

    <item
        android:id="@+id/accountsettings"
        android:title="Account Settings"
        android:fontFamily="sans-serif-light" />

    <item
        android:id="@+id/logout"
        android:title="Log Out"
        android:fontFamily="sans-serif-light" />

</menu>

